--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "puppeteer": "^23.7.1"
+    "puppeteer": "^23.7.1",
+    "puppeteer-core": "^23.7.1"
   }
 }
